--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "firebase": "^4.6.2",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.4.2",
+    "ts-md5": "^1.2.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
